src/objects/HUC__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HUCStati</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subwatershed__c</fullName>
        <label>Subwatershed</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watershed__c</fullName>
        <label>Watershed</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <label>HUC</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HUCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>